文本小修改

--- a/第一阶段U3D/解题思路.md
+++ b/第一阶段U3D/解题思路.md
@@ -62,7 +62,7 @@
 
 > Proxy Pattern. Provide a surrogate or placeholder for another object to control access to it.
 
-根据《设计模式之禅》》，代理模式有3个角色：
+根据《设计模式之禅》，代理模式有3个角色：
 
 - Subject抽象主题角色
 - RealSubject具体主题角色
