C++task1错误解法演示

--- a/week1C++/解题思路.md
+++ b/week1C++/解题思路.md
@@ -20,12 +20,15 @@
 
 ### 注意点
 
-- 注意进行分类，考虑整数的正负、范围。
-- 对字符指针char*的理解。
+- 注意进行分类讨论和考虑特殊情况——整数的正负、范围。
+- 可以用取余运算，提取整数的个位上的数字。
+- 单个字符也可以做加减运算，实质是对其ASII码进行加减。
+- 递归算法，简单说就是不断循环调用自身，直到满足某个条件。
+- 对字符指针char*的理解。思考下面这些代码。
 
     char c = 'A'; //存储单个字符
     char* cp = c;
-    char * cp = c;
+    char * cp = c + '0';
     char *cp = c; 
 
 ## 题目2
