Update: week1C++task1

--- a/week1C++/解题思路.md
+++ b/week1C++/解题思路.md
@@ -22,14 +22,20 @@
 
 - 注意进行分类讨论和考虑特殊情况——整数的正负、范围。
 - 可以用取余运算，提取整数的个位上的数字。
-- 单个字符也可以做加减运算，实质是对其ASII码进行加减。
+- 字符也可以做加减运算，实质是对其ASII码进行加减。
 - 递归算法，简单说就是不断循环调用自身，直到满足某个条件。
-- 对字符指针char*的理解。思考下面这些代码。
+- 对字符指针char*和字符数组的理解。对[ *和 &](http://www.cnblogs.com/mr-stn/p/9037773.html)的理解。
+
+思考下面这些代码。
 
     char c = 'A'; //存储单个字符
-    char* cp = c;
-    char * cp = c + '0';
-    char *cp = c; 
+    char* cp = &c; //等价于char * cp = &c;和char * cp = &c;
+    bool isTrue = *cp == 'A'; //这里注意==运算符的优先级比=要高
+
+    // 指针变量的赋值方式：
+    cp = &c; //改变了cp存放的内存地址，为变量c的地址
+    *cp = '0'; //改变了cp指向的内存地址存放的值，相当于c='0';
+    
 
 ## 题目2
 编码实现字符串类CNString，该类有默认构造函数、类的拷贝函数、类的析构函数及运算符重载，需实现以下“=”运算符、“+”运算、“[]”运算符、“<”运算符及“>”运算符及“==”运算符（备注：可以用strcpy_s, strcat_s，但禁用STL及String类），以下为各个运算符的运算效果的详细说明（35分）
@@ -48,8 +54,8 @@ b)	字符串“+”运算
 c)	字符串“[]”运算
 
     CNString nstring1("abc");
-    cout<< nstring1[0] ;// 则屏幕显示a
-    cout<< nstring1[2] ; // 则屏幕显示c
+    cout<< nstring1[0];// 则屏幕显示a
+    cout<< nstring1[2]; // 则屏幕显示c
 
 d)	“<”运算符
 
