--- a/week1C++/遇到的问题.md
+++ b/week1C++/遇到的问题.md
@@ -11,3 +11,125 @@
 于是我打开VS Installer，发现CRT SDK已经安装，我转而认为是win10 SDK的问题，于是下载了所有的win10 SDK。重启计算机之后，运行工程，仍然是原来的错误。
 
 于是我又修改了**项目-属性中的Windows SDK版本**，再次尝试开始调试，结果成功打开。
+
+## const修饰函数的...
+
+详见[CSDN博文](https://blog.csdn.net/lz20120808/article/details/46662569)。
+
+### 函数的参数
+
+对于**非内部数据类型**的输入参数，将**void Func(A a)的值传递方式** 改为 **void Func(const A &a)这种const修饰的引用传递**既能提高效率（因为省略了构造对象），又能保护a不会被修改。
+
+### 函数的返回值
+
+如果给以**指针传递**的函数返回值加const 修饰，那么函数返回值只能被赋给**同类型指针常量**。
+
+    const char * GetString(void);
+    // char *s = GetString(); illegal statement
+
+若果返回值是**值传递**的，加const修饰没有任何意义，因为函数会把返回值复制到外部临时的存储单元中。
+
+返回值是**引用传递**出现的场合不多，主要为了实现链式表达。我没搞清楚，有空再细看原文。
+
+### 函数体
+
+在函数体的前面（其实是函数声明的尾部）加const修饰符，是什么骚操作？
+
+它用于类中的成员函数中：任何**不会修改数据成员**的函数都应该声明为const 类型。**目的是提高程序的健壮性**：在编写const成员函数时，修改数据成员或**调用其它非const成员函数**，编译器都会报错。
+
+- 即使某个函数本质上没有修改任何数据，但没有声明为const，也是不能被const函数调用的。
+- 任何情况下通过任何手段，都可修改**加上mutable修饰符的数据成员**。用const成员函数也可以修改。
+
+
+## 区别const和char* 的多种组合方式
+
+看到下面3种字符指针，你是否是懵逼的？
+
+- const char * p
+- char * const p 
+- const char * const p
+
+中文容易有歧义，因此看英文文档。下面简要翻译一下geeksforgeeks网上的[博文](https://www.geeksforgeeks.org/difference-const-char-p-char-const-p-const-char-const-p/)：
+
+const修饰符可以用于任何变量的声明，来确保它们的值不可改变。
+
+> const keyword applies to whatever is immediately to its left. If there is nothing to its left, it applies to whatever is immediately to its right.
+
+这句让英语渣的我费解了，不过貌似是const 关键字**优先修饰它的左边**的意思……还是看例子吧。
+
+插：网上说，没有指针时const放数据类型的左右效果一样。
+
+### 1 const char *ptr
+
+> a (non-const) pointer to a const char
+
+ptr指向字符常量。你不能改变ptr指向的变量的值，但你可以改变ptr自身的指向。示例代码：
+
+    // C program to illustrate 
+    // char const *p 
+    #include<stdio.h> 
+    #include<stdlib.h> 
+    
+    int main() 
+    { 
+    	char a ='A', b ='B'; 
+    	const char *ptr = &a; 
+    	
+    	//*ptr = b; illegal statement (assignment of read-only location *ptr) 
+    	
+    	// ptr can be changed 
+    	printf( "value pointed to by ptr: %c\n", *ptr); 
+    	ptr = &b; 
+    	printf( "value pointed to by ptr: %c\n", *ptr); 
+    } 
+
+Output：
+
+    value pointed to by ptr:A
+    value pointed to by ptr:B
+
+**NOTE:** const char *p 等价于 char const *p ，两者星号的位置其实是相同的。
+
+### 2 char *const ptr
+
+> a constant pointer to non-constant character
+
+指针常量指向一个字符变量。你不能改变ptr却能改变ptr指向的变量。
+
+    // C program to illustrate 
+    // char* const p 
+    #include<stdio.h> 
+    #include<stdlib.h> 
+    
+    int main() 
+    { 
+    	char a ='A', b ='B'; 
+    	char *const ptr = &a; 
+    	printf( "Value pointed to by ptr: %c\n", *ptr); 
+    	printf( "Address ptr is pointing to: %d\n\n", ptr); 
+    
+    	//ptr = &b; illegal statement (assignment of read-only variable ptr) 
+    
+    	// changing the value at the address ptr is pointing to 
+    	*ptr = b; 
+    	printf( "Value pointed to by ptr: %c\n", *ptr); 
+    	printf( "Address ptr is pointing to: %d\n", ptr); 
+    } 
+
+Output：
+
+    Value pointed to by ptr: A
+    Address ptr is pointing to: -1443150762
+    
+    Value pointed to by ptr: B
+    Address ptr is pointing to: -1443150762
+
+**NOTE:** 指针总是指向同一个地址的，但该地址上的值会改变。
+
+### 3 const char * const ptr
+
+> a constant pointer to constant character
+
+无论是指针还是它所指向的值都不能改变。
+
+**NOTE:** char const * const ptr 等价于 const char *const ptr
