--- a/week1C++/遇到的问题.md
+++ b/week1C++/遇到的问题.md
@@ -12,7 +12,7 @@
 
 于是我又修改了**项目-属性中的Windows SDK版本**，再次尝试开始调试，结果成功打开。
 
-## const修饰函数的...
+## 关键字const用来修饰函数的...
 
 详见[CSDN博文](https://blog.csdn.net/lz20120808/article/details/46662569)。
 
@@ -64,29 +64,6 @@ const修饰符可以用于任何变量的声明，来确保它们的值不可改
 > a (non-const) pointer to a const char
 
 ptr指向字符常量。你不能改变ptr指向的变量的值，但你可以改变ptr自身的指向。示例代码：
-
-    // C program to illustrate 
-    // char const *p 
-    #include<stdio.h> 
-    #include<stdlib.h> 
-    
-    int main() 
-    { 
-    	char a ='A', b ='B'; 
-    	const char *ptr = &a; 
-    	
-    	//*ptr = b; illegal statement (assignment of read-only location *ptr) 
-    	
-    	// ptr can be changed 
-    	printf( "value pointed to by ptr: %c\n", *ptr); 
-    	ptr = &b; 
-    	printf( "value pointed to by ptr: %c\n", *ptr); 
-    } 
-
-Output：
-
-    value pointed to by ptr:A
-    value pointed to by ptr:B
 
 **NOTE:** const char *p 等价于 char const *p ，两者星号的位置其实是相同的。
 
