将数据库的代码乱七八糟地加进来

--- a/week4U3D/Server/通讯协议文档.md
+++ b/week4U3D/Server/通讯协议文档.md
@@ -21,7 +21,7 @@
 
 ## connect
 
-客户端收到Connected指令后，将该指令发送给服务端，并在消息中name字段写上自己的用户名信息。
+客户端收到Connected指令后，将该指令发送给服务端，并在消息中name字段写上自己的用户名，pswd字段写上密码信息。
 
 ## 刷新名字
 
