--- a/week4/Server/通讯协议文档.md
+++ b/week4/Server/通讯协议文档.md
@@ -15,17 +15,48 @@
 
 #不同指令的含义：
 
+当instruct为true时，消息传递的是一条指令。
+
+- 大写字母开头的都是服务器给客户端的指令；
+- 小写字母开头的则是客户端发给服务器的指令。
+
+根据***str字符串的内容***不同，这条指令有着不同的含义：
+
 ## Connected
 
-服务器接收到某客户端发来的Socket连接请求，与之建立连接之后，将该指令返回给该客户端。
+连接成功。
+
+服务器接收到某客户端发来的Socket请求，与之建立连接之后，将该指令返回给该客户端。
 
 ## connect
 
-客户端收到Connected指令后，将该指令发送给服务端，并在消息中name字段写上自己的用户名，pswd字段写上密码信息。
+登录（进入房间）请求。
 
-## 刷新名字
+客户端将该指令发送给服务端，并在消息中name字段写上自己的用户名，pswd字段写上密码信息。信息校验成功后，用户进入房间（inRoom = true）。
 
-有客户端断开了连接时，或者有新的客户端向服务器发送了connect指令时，将该指令广播给客户端，让他们刷新房间中的用户名单。
+## manipulate
 
-**注意**：这条指令是简化的形式，instruct字段值为false。它相当于用Server的身份发送了一条聊天消息。
+客户端上传玩家的操作。有如下字段：
+
+- **name:** 用户名字符串，是玩家角色的唯一标识；
+- **move:** 移动向量，三维数组形式；
+- **c:** 下蹲操作，bool变量；
+- **j:** 跳跃操作，bool变量。
+
+## update
+
+客户端上传角色状态。有如下字段：
+
+- **name:** 用户名，是玩家角色的唯一标识；
+- **p:** 角色位置，角色tranform组件的position属性，形式是三维向量（长度为3的浮点数数组）；
+- **r:** 角色朝向，角色tranform组件的rotation属性，形式同上；
+- **v:** 角色速度，形式同上；
+- **t:** 时间，以服务端为准，精度为1/10秒。时间从第一个用户进入房间开始计算。当所有玩家都退出房间时，时间清零。
+
+## Update
+
+更新客户端角色状态。
+
+与update的数据结构一样。Update是服务器将所有客户端的角色状态广播给客户端，往往一次性有几组数据。
+
 
