5月9日星期四

--- a/week4/Server/通讯协议文档.md
+++ b/week4/Server/通讯协议文档.md
@@ -17,8 +17,7 @@
 
 当instruct为true时，消息传递的是一条指令。
 
-- 大写字母开头的都是服务器给客户端的指令；
-- 小写字母开头的则是客户端发给服务器的指令。
+大写字母开头的都是服务器给客户端的指令。
 
 根据***str字符串的内容***不同，这条指令有着不同的含义：
 
@@ -36,7 +35,7 @@
 
 ## manipulate
 
-客户端上传玩家的操作。有如下字段：
+玩家的操作。有如下字段：
 
 - **name:** 用户名字符串，是玩家角色的唯一标识；
 - **move:** 移动向量，三维数组形式；
@@ -48,9 +47,9 @@
 客户端上传角色状态。有如下字段：
 
 - **name:** 用户名，是玩家角色的唯一标识；
+- **h:** 血量，整数，取值为[0,100]；
 - **p:** 角色位置，角色tranform组件的position属性，形式是三维向量（长度为3的浮点数数组）；
 - **r:** 角色朝向，角色tranform组件的rotation属性，形式同上；
-- **v:** 角色速度，形式同上；
 - **t:** 时间，以服务端为准，精度为1/10秒。时间从第一个用户进入房间开始计算。当所有玩家都退出房间时，时间清零。
 
 ## Update
