5月12日（最后期限）

--- a/week4/Server/通讯协议文档.md
+++ b/week4/Server/通讯协议文档.md
@@ -9,6 +9,7 @@
       name: //string类型，消息发送方的username
       str: //string类型，发送的聊天文本或指令
       time: //string类型，消息发送的时间
+      ...
     }
 
 ----
@@ -16,8 +17,6 @@
 #不同指令的含义：
 
 当instruct为true时，消息传递的是一条指令。
-
-大写字母开头的都是服务器给客户端的指令。
 
 根据***str字符串的内容***不同，这条指令有着不同的含义：
 
@@ -56,6 +55,6 @@
 
 更新客户端角色状态。
 
-与update的数据结构一样。Update是服务器将所有客户端的角色状态广播给客户端，往往一次性有几组数据。
+与update的数据结构一样。pdate是服务器将所有客户端的角色状态广播给客户端，往往一次性有几组数据。
 
 
